fix - #30 and switch on jumpscare

--- a/src/sass/och/_game.scss
+++ b/src/sass/och/_game.scss
@@ -12,4 +12,18 @@
 
 #pano {
   z-index: 1;
+
+  .link-hotspot-tooltip {
+    position: static;
+    display: inline-block;
+    opacity: 1;
+    padding: 0 5px;
+    margin: 0;
+    background-color: transparent;
+    transform: none;
+
+    &:hover {
+      transform: none;
+    }
+  }
 }
