--- a/styles/game-och.css
+++ b/styles/game-och.css
@@ -305,6 +305,16 @@
 
 #pano {
   z-index: 1; }
+  #pano .link-hotspot-tooltip {
+    position: static;
+    display: inline-block;
+    opacity: 1;
+    padding: 0 5px;
+    margin: 0;
+    background-color: transparent;
+    transform: none; }
+    #pano .link-hotspot-tooltip:hover {
+      transform: none; }
 
 #pageClues > div > img {
   width: 30%;
